# trabalho-cg

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp
artifacts/esphere/: esphere.h
artifacts/gridplane/: constants.h  gridplane.h
models/city/02/: a.blend  a.blend1  floor.blend  floor.blend1  house1.blend  house2.blend  house3.blend  house4.blend  house4.blend1  house5.blend  house5.blend1  house6.blend  house6.blend1  red_cube.blend
utils/: camera.h  common.h  constants.h  gridplane.h  input.h  keyboard.h  light.h  objLoader.h
